--- a/.github/workflows/sync-fork.yaml
+++ b/.github/workflows/sync-fork.yaml
@@ -6,8 +6,7 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    permissions: write-all
     steps:
       - run: gh repo sync $REPOSITORY -b $BRANCH_NAME
         env:
