--- a/.github/workflows/sync-fork.yaml
+++ b/.github/workflows/sync-fork.yaml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
-      - run: gh repo sync $REPOSITORY -b $BRANCH_NAME
+      - run: echo "
+      - run: gh repo sync $REPOSITORY -b $BRANCH_NAME"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
