--- a/.github/workflows/sync-fork.yaml
+++ b/.github/workflows/sync-fork.yaml
@@ -9,7 +9,7 @@ jobs:
     permissions: write-all
     steps:
       - run: echo "repo sync $REPOSITORY -b $BRANCH_NAME"
-      - run: gh repo sync $REPOSITORY -b $BRANCH_NAME
+      - run: gh repo sync $REPOSITORY -b $BRANCH_NAME  --force 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
